unpackaged/objects/Document_Files__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Document__c</fullName>
        <label>Legal Document</label>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Document Files</relationshipLabel>
        <relationshipName>Document_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Document File</label>
    <nameField>
        <displayFormat>FILE-{00000}</displayFormat>
        <label>File</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>